k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-prod-service
spec:
  selector:
    app: nginx-prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
